# ferrix

./: .gitignore  Cargo.toml  flake.nix  linker.ld  x86-kernel.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
