[package]
name = "ferrix"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = true  # Enable Link Time Optimization

# Configure the build
[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]
